--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,7 +1,7 @@
 message=helloworld
 spring.datasource.url=jdbc:mysql://localhost:3306/microservice
-spring.datasource.username=newuser
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=thanhhanu4681
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
